fix: align Account entity with Go backend schema and fix compilation errors
- Remove non-existent columns from Account entity (refreshToken, credentialExpiredAt,
  lastRefreshAt, refreshErrorCount, usedInputTokens, usedOutputTokens, inputTokenLimit,
  outputTokenLimit, lastError) - Go backend stores refresh_token in credentials JSONB
- Fix AccountService: rename resetTokenUsage to resetAccount, listAllWithRefreshToken
  to listAllOAuthAccounts
- Fix AccountHealthService: remove isQuotaExhausted method, use errorMessage field
- Fix AccountRefreshService: extract refresh_token from credentials JSON
- Fix OAuth handlers: remove credentialExpiredAt setter calls
- Fix AdminService: use errorMessage instead of lastError
- Add RestTemplate and HttpClient beans to WebClientConfig
- Add @TableField annotations for image_price columns in Group entity
- Fix dev profile OAuth placeholder values in application.yml
- Remove OpenAIController with duplicate /v1/chat/completions routes
- Add AccountGroupMapper if missing

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>